--- a/source/photo.html
+++ b/source/photo.html
@@ -10,38 +10,40 @@
   </head>
   <body class="page page--inner">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="adaptive-logo" src="img/adaptive-logo.svg" width="226" alt="Логотип барбершопа «Бородинский» в виде стилизованного текста">
-      </a>
-      <nav class="main-nav main-nav--closed main-nav--nojs">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__page-menu-list">
-            <li class="main-nav__page-menu-item">
-              <a class="main-nav__page-menu-link" href="index.html">Главная</a>
-            </li>
-            <li class="main-nav__page-menu-item main-nav__page-menu-item--active">
-              <a class="main-nav__page-menu-link">Наши работы</a>
-            </li>
-            <li class="main-nav__page-menu-item">
-              <a class="main-nav__page-menu-link" href="form.html">Записаться</a>
-            </li>
-            <li class="main-nav__page-menu-item">
-              <a class="main-nav__page-menu-link">Контакты</a>
-            </li>
-          </ul>
-          <ul class="user-menu main-nav__user-menu">
-            <li class="user-menu__list-item">
-              <a class="user-menu__link user-menu__login" href="login.html">
-                <svg class="user-menu__login-icon" width="16" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-login"></use>
-                </svg>
-                Войти
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="page-header__wrapper">
+        <a class="page-header__logo">
+          <img class="adaptive-logo" src="img/adaptive-logo.svg" width="226" alt="Логотип барбершопа «Бородинский» в виде стилизованного текста">
+        </a>
+        <nav class="main-nav main-nav--closed main-nav--nojs">
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__page-menu-list">
+              <li class="main-nav__page-menu-item">
+                <a class="main-nav__page-menu-link" href="index.html">Главная</a>
+              </li>
+              <li class="main-nav__page-menu-item main-nav__page-menu-item--active">
+                <a class="main-nav__page-menu-link">Наши работы</a>
+              </li>
+              <li class="main-nav__page-menu-item">
+                <a class="main-nav__page-menu-link" href="form.html">Записаться</a>
+              </li>
+              <li class="main-nav__page-menu-item">
+                <a class="main-nav__page-menu-link">Контакты</a>
+              </li>
+            </ul>
+            <ul class="user-menu main-nav__user-menu">
+              <li class="user-menu__list-item">
+                <a class="user-menu__link user-menu__login" href="login.html">
+                  <svg class="user-menu__login-icon" width="16" xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="img/sprite.svg#icon-login"></use>
+                  </svg>
+                  Войти
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main>
       <h1 class="visually-hidden">Страница с работами барбершопа «Бородинский»</h1>
