remove slick-theme styles

--- a/source/index.html
+++ b/source/index.html
@@ -5,10 +5,9 @@
     <title>Барбершоп «Бородинский»</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link href="vendor/slick/slick.css" rel="stylesheet">
-    <link href="vendor/slick/slick-theme.css" rel="stylesheet">
+    <link href="libs/slick/slick.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
-    <script src="vendor/picturefill/picturefill.min.js" async></script>
+    <script src="libs/picturefill/picturefill.min.js" async></script>
   </head>
   <body class="page">
     <header class="page-header">
@@ -243,9 +242,9 @@
       </form>
     </section>
     <script src="js/scripts.min.js"></script>
-    <script src="vendor/jquery/jquery-1.11.0.min.js"></script>
-    <script src="vendor/jquery/jquery-migrate-1.2.1.min.js"></script>
-    <script src="vendor/slick/slick.min.js"></script>
+    <script src="libs/jquery/jquery-1.11.0.min.js"></script>
+    <script src="libs/jquery/jquery-migrate-1.2.1.min.js"></script>
+    <script src="libs/slick/slick.min.js"></script>
     <script src="js/slider.min.js"></script>
   </body>
 </html>
