--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link href="css/style.min.css" rel="stylesheet">
+    <script src="libs/picturefill/picturefill.min.js" async></script>
   </head>
   <body class="page page--inner">
     <header class="page-header">
