delete useless html tags and styles of sliders

--- a/source/index.html
+++ b/source/index.html
@@ -83,7 +83,7 @@
       </section>
       <section class="advantages angle">
         <h2 class="visually-hidden">Наши преимущества</h2>
-          <ul class="advantages__list slider__list">
+          <ul class="advantages__slider slider">
             <li class="advantages__item advantages__item--fast slider__item">
               <h3 class="advantages__title">Быстро</h3>
               <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно и Вы — счастливый обладатель стильной стрижки-минутки.</p>
@@ -134,7 +134,7 @@
         <div class="reviews__wrapper">
           <h2 class="reviews__title">Отзывы о нас</h2>
           <a class="btn ghost-btn ghost-btn--for-light-bg reviews__write reviews__ghost-btn">Оставить свой</a>
-          <ul class="reviews__list slider__list">
+          <ul class="reviews__slider slider">
             <li>
               <blockquote class="reviews__item slider__item">
                 <p class="reviews__author-picture">
@@ -152,7 +152,7 @@
               </blockquote>
             </li>
             <li>
-              <blockquote class="reviews__item  slider__item">
+              <blockquote class="reviews__item slider__item">
                 <p class="reviews__author-picture">
                   <picture>
                     <source type="image/webp" media="(min-width: 1200px)" srcset="img/john-desktop@2x.webp 2x, img/john-desktop.webp 1x">
@@ -168,7 +168,7 @@
               </blockquote>
             </li>
             <li>
-            <blockquote class="reviews__item  slider__item">
+            <blockquote class="reviews__item slider__item">
               <p class="reviews__author-picture">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="img/ivan-desktop@2x.webp 2x, img/ivan-desktop.webp 1x">
