fix automatically reversed setting of slider when resizing

--- a/source/index.html
+++ b/source/index.html
@@ -245,6 +245,6 @@
     <script src="libs/jquery/jquery-1.11.0.min.js"></script>
     <script src="libs/jquery/jquery-migrate-1.2.1.min.js"></script>
     <script src="libs/slick/slick.min.js"></script>
-    <script src="js/slider.min.js"></script>
+    <script src="js/slider.js"></script>
   </body>
 </html>
