--- a/source/form.html
+++ b/source/form.html
@@ -207,37 +207,36 @@
         </section>
       </div>
     </footer>
-    <section class="login modal">
-      <h2 class="login__title">Личный кабинет</h2>
-      <p class="login__text">Введите свой логин и пароль, чтобы войти</p>
-      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-        <label class="login-form__user-icon">
-          <input type="text" name="user-login" placeholder="Логин">
-        </label>
-        <label class="login-form__user-password">
-          <input type="password" name="user-password" placeholder="Пароль">
-        </label>
-        <div class="login__info">
-          <label class="checkbox login__checkbox">
-            <input class="visually-hidden" type="checkbox" name="user-remember">
-            <span class="checkbox__indicator"></span>
-            Запомните меня
+    <section class="modal login overlay visually-hidden" aria-hidden="true" tabindex="-1" role="dialog" aria-labelledby="loginTitle" aria-describedby="loginDesc">
+      <div class="modal__content login__content">
+        <h2 id="loginTitle" class="login__title">Личный кабинет</h2>
+        <p id="loginDesc" class="login__text">Введите свой логин и пароль, чтобы войти</p>
+        <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+          <label class="login-form__user-icon">
+            <input type="text" pattern="[A-Za-z0-9]{6,20}" title="Логин может содержать в себе от 6 до 20 латинских символов." name="user-login" placeholder="Логин" required>
           </label>
-          <a class="login__restore-link">Я забыл пароль!</a>
-        </div>
-        <button class="btn huge-btn login__btn" type="submit">Войти</button>
-        <button class="btn ghost-btn login__btn login__close-btn" type="button">Закрыть</button>
-      </form>
+          <label class="login-form__user-password">
+            <input type="password" pattern = "(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title = "Пароль не может быть короче восьми символов и должен содержать хотя бы одну цифру, одну маленькую и одну большую латинскую букву." name="user-password" placeholder="Пароль" required>
+          </label>
+          <div class="login__info">
+            <label class="checkbox login__checkbox">
+              <input class="visually-hidden" type="checkbox" name="user-remember">
+              <span class="checkbox__indicator"></span>
+              Запомните меня
+            </label>
+            <a class="login__restore-link">Я забыл пароль!</a>
+          </div>
+          <button class="btn huge-btn login__btn" type="submit">Войти</button>
+          <button class="btn login__close-btn modal__close-btn" type="button">Закрыть</button>
+        </form>
+      </div>
     </section>
-    <section class="success modal">
-      <h2 class="success__title">Это успех!</h2>
-      <p class="success__text">Ваша заявка отправлена.<br> Ожидайте, мы свяжемся с вами как только будет минутка.</p>
-      <button class="btn huge-btn success__btn" type="button">Закрыть окно</button>
-    </section>
-    <section class="failure modal">
-      <h2 class="failure__title">Неудача</h2>
-      <p class="failure__text">Что-то пошло не так. Проверьте выделенные красным поля формы.</p>
-      <button class="btn huge-btn failure__btn" type="button">Ок</button>
+    <section class="modal status overlay visually-hidden" aria-hidden="true" tabindex="-1" role="dialog" aria-labelledby="statusTitle" aria-describedby="statusDesc">
+      <div class="status__content">
+        <h2 id="statusTitle" class="status__title">Это успех!</h2>
+        <p id="statusDesc" class="status__text">Ваша заявка отправлена.<br> Ожидайте, мы свяжемся с вами как только будет минутка</p>
+        <button class="btn huge-btn status__btn modal__close-btn" type="button">Закрыть окно</button>
+      </div>
     </section>
     <script src="js/scripts.min.js"></script>
     <script src="js/form.min.js"></script>
