remove CSS outlines in an accessible manner

--- a/source/form.html
+++ b/source/form.html
@@ -240,5 +240,6 @@
     </section>
     <script src="js/scripts.min.js"></script>
     <script src="js/form.min.js"></script>
+    <script src="libs/outline/outline.js"></script>
   </body>
 </html>
