--- a/source/index.html
+++ b/source/index.html
@@ -248,5 +248,6 @@
     <script src="libs/jquery/jquery-migrate-1.2.1.min.js"></script>
     <script src="libs/slick/slick.min.js"></script>
     <script src="js/slider.min.js"></script>
+    <script src="libs/outline/outline.js"></script>
   </body>
 </html>
