--- a/source/photo.html
+++ b/source/photo.html
@@ -234,5 +234,6 @@
       </div>
     </section>
     <script src="js/scripts.min.js"></script>
+    <script src="libs/outline/outline.js"></script>
   </body>
 </html>
