rewrited all checkboxes & removed outline.js

--- a/source/form.html
+++ b/source/form.html
@@ -129,42 +129,42 @@
                 <li class="order__add-services-item">
                   <label class="checkbox" for="paint-beard">
                     <input class="visually-hidden" type="checkbox" id="paint-beard" name="additional" value="paint-beard" checked>
-                    <span class="checkbox__indicator"></span>
+                    <span class="checkbox__box"></span>
                     Подкрасить бороду
                   </label>
                 </li>
                 <li class="order__add-services-item">
                   <label class="checkbox" for="handlebar">
                     <input class="visually-hidden" type="checkbox" id="handlebar" name="additional" value="handlebar" checked>
-                    <span class="checkbox__indicator"></span>
+                    <span class="checkbox__box"></span>
                     Накрутить усы
                   </label>
                 </li>
                 <li class="order__add-services-item">
                   <label class="checkbox" for="comb-beard">
                     <input class="visually-hidden" type="checkbox" id="comb-beard" name="additional" value="comb-beard">
-                    <span class="checkbox__indicator"></span>
+                    <span class="checkbox__box"></span>
                     Причесать бороду
                   </label>
                 </li>
                 <li class="order__add-services-item">
                   <label class="checkbox" for="undercut">
                     <input class="visually-hidden" type="checkbox" id="undercut" name="additional" value="undercut">
-                    <span class="checkbox__indicator"></span>
+                    <span class="checkbox__box"></span>
                     Подровнять виски
                 </label>
                 </li>
                 <li class="order__add-services-item">
                   <label class="checkbox" for="paint-hair">
                     <input class="visually-hidden" type="checkbox" id="paint-hair" name="additional" value="paint-hair">
-                    <span class="checkbox__indicator"></span>
+                    <span class="checkbox__box"></span>
                     Убрать седину
                 </label>
                 </li>
                 <li class="order__add-services-item">
                   <label class="checkbox" for="bald-shave">
                     <input class="visually-hidden" type="checkbox" id="bald-shave" name="additional" value="bald-shave">
-                    <span class="checkbox__indicator"></span>
+                    <span class="checkbox__box"></span>
                     Отполировать лысину
                   </label>
                 </li>
@@ -240,6 +240,5 @@
     </section>
     <script src="js/scripts.min.js"></script>
     <script src="js/form.min.js"></script>
-    <script src="libs/outline/outline.js"></script>
   </body>
 </html>
