fixed modal checkbox

--- a/source/form.html
+++ b/source/form.html
@@ -221,7 +221,7 @@
           <div class="login__info">
             <label class="checkbox login__checkbox">
               <input class="visually-hidden" type="checkbox" name="user-remember">
-              <span class="checkbox__indicator"></span>
+              <span class="checkbox__box"></span>
               Запомните меня
             </label>
             <a class="login__restore-link">Я забыл пароль!</a>
