--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link href="libs/slick/slick.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <script src="libs/picturefill/picturefill.min.js" async></script>
   </head>
   <body class="page">
