rewrited form, setup libs for outline by keyboard only

--- a/source/form.html
+++ b/source/form.html
@@ -72,9 +72,9 @@
               <legend>Выберите модель бороды:</legend>
               <ul class="order__beard-list">
                 <li class="order__beard-item">
-                  <label class="radio order__radio" for="admiral">
-                    <input class="visually-hidden" id="admiral" type="radio" name="beard-type" value="admiral" checked>
-                    <span class="radio__indicator"></span>
+                  <label class="radio order__radio">
+                    <input class="visually-hidden" type="radio" name="beard-type" value="admiral" checked>
+                    <span class="radio__box"></span>
                     адмирал
                     <span class="order__beard-img-wrapper">
                       <img src="img/admiral.svg" width="52" height="49" alt="вариант стрижки бороды «Адмирал»">
@@ -82,9 +82,9 @@
                   </label>
                 </li>
                 <li class="order__beard-item">
-                  <label class="radio order__radio" for="lumberjack">
-                    <input class="visually-hidden" id="lumberjack" type="radio" name="beard-type" value="lumberjack">
-                    <span class="radio__indicator"></span>
+                  <label class="radio order__radio">
+                    <input class="visually-hidden" type="radio" name="beard-type" value="lumberjack">
+                    <span class="radio__box"></span>
                     лесоруб
                     <span class="order__beard-img-wrapper">
                       <img src="img/lumberjack.svg" width="58" height="68" alt="вариант стрижки бороды «Лесоруб»">
@@ -92,29 +92,29 @@
                   </label>
                 </li>
                 <li class="order__beard-item">
-                  <label class="radio order__radio" for="polar">
-                    <input class="visually-hidden" id="polar" type="radio" name="beard-type" value="polar">
+                  <label class="radio order__radio">
+                    <input class="visually-hidden" type="radio" name="beard-type" value="polar">
                     полярник
-                    <span class="radio__indicator"></span>
+                    <span class="radio__box"></span>
                     <span class="order__beard-img-wrapper">
                       <img src="img/polar.svg" width="64" height="78" alt="вариант стрижки бороды «Полярник»">
                     </span>
                   </label>
                 </li>
                 <li class="order__beard-item">
-                  <label class="radio order__radio" for="boyar">
-                    <input class="visually-hidden" id="boyar" type="radio" name="beard-type" value="boyar">
+                  <label class="radio order__radio">
+                    <input class="visually-hidden" type="radio" name="beard-type" value="boyar">
                     боярин
-                    <span class="radio__indicator"></span>
+                    <span class="radio__box"></span>
                     <span class="order__beard-img-wrapper">
                       <img src="img/boyar.svg" width="58" height="98" alt="вариант стрижки бороды «Боярин»">
                     </span>
                   </label>
                 </li>
                 <li class="order__beard-item">
-                  <label class="radio order__radio" for="sage">
-                    <input class="visually-hidden" id="sage" type="radio" name="beard-type" value="sage">
-                    <span class="radio__indicator"></span>
+                  <label class="radio order__radio">
+                    <input class="visually-hidden" type="radio" name="beard-type" value="sage">
+                    <span class="radio__box"></span>
                     мудрец
                     <span class="order__beard-img-wrapper">
                       <img src="img/sage.svg" width="46" height="105" alt="вариант стрижки бороды «Мудрец»">
@@ -240,5 +240,6 @@
     </section>
     <script src="js/scripts.min.js"></script>
     <script src="js/form.min.js"></script>
+    <script src="libs/focus-visible/focus-visible.min.js"></script>
   </body>
 </html>
