moved on top h1 tag

--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
     <script src="libs/picturefill/picturefill.min.js" async></script>
   </head>
   <body class="page">
+    <h1 class="visually-hidden">Барбершоп «Бородинский» – истинно мужская классика, главная страница</h1>
     <header class="page-header">
       <div class="page-header__wrapper">
         <a class="page-header__logo">
@@ -47,7 +48,6 @@
       </div>
     </header>
     <main>
-      <h1 class="visually-hidden">Барбершоп «Бородинский» – истинно мужская классика</h1>
       <section class="stats">
         <div class="stats__wrapper">
           <header class="stats__header">
