--- a/source/form.html
+++ b/source/form.html
@@ -190,13 +190,13 @@
           <b class="social__title">Давайте дружить!</b>
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--vk ghost-btn ghost-btn--for-dark-bg" href="#">Мы в Вконтакте</a>
+              <a class="social__link social__link--vk ghost-btn ghost-btn--for-dark-bg">Мы в Вконтакте</a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--fb ghost-btn ghost-btn--for-dark-bg" href="#">Мы в Фейсбуке</a>
+              <a class="social__link social__link--fb ghost-btn ghost-btn--for-dark-bg">Мы в Фейсбуке</a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--inst ghost-btn ghost-btn--for-dark-bg" href="#">Мы в Инстаграме</a>
+              <a class="social__link social__link--twitter ghost-btn ghost-btn--for-dark-bg" href="https://twitter.com/myLovelyWebBlog">Мы в Твиттере</a>
             </li>
           </ul>
         </section>
